--- a/posts/2015-09-21.md
+++ b/posts/2015-09-21.md
@@ -1,6 +1,6 @@
 ## An introduction to timely dataflow, part 3.
 
-This post is the third in a series ([part 1](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-14.md), [part 2](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-18.md)) about writing timely dataflow programs. 
+This post is the third in a series ([part 1](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-14.md), [part 2](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-18.md)) about writing timely dataflow programs.
 
 Today we are going to take what we've learned about timely dataflow for a spin, and write a "real program": breadth-first search on random graphs.
 
@@ -172,14 +172,16 @@ Of course, we also called `notify_at` here as well, because we do want to be not
 
 #### Processing edge data
 
-You can skip this part if you trust that I can put a graph together, and don't really care how it happens. If you are skeptical or interested, this is the code that I used. I use two additional bits of state to represent the graph:
+You can skip this part if you trust that I can put a graph together, and don't really care how it happens. If you are skeptical or interested, this is the code that I used. The good news is that if you start from random edge data, you are probably going to end up with a random graph, even if you botch the algorithm.
+
+I use two additional bits of state to represent the graph:
 
 ```rust
 offsets: Vec<u32>,
 targets: Vec<u32>,
 ```
 
-where the slice `targets[offsets[node]..offsets[node+1]]` holds the neighbors of `node`. If we are doing really big graph processing on just a few workers, you might want to have `offsets` be a `Vec<usize>` (if you have more than 4 billion edges per worker).
+where the slice `targets[offsets[node]..offsets[node+1]]` holds the neighbors of `node`. If we are doing really big graph processing on just a few workers, you might want to have `offsets` be a `Vec<usize>` (if you have more than 4 billion edges per worker). It goes just a bit slower if you do that.
 
 These two get populated by finishing the sorting of edges by source, and then just reading them out of the sorted order:
 
@@ -217,9 +219,9 @@ The `drain_temp()` method is something I copy/pasted from the Rust source. They 
 
 Here is where we do the exciting BFS logic! The complicated moment we've been building up to! We had a queue containing those nodes we want to process, and we need to swing through each of these nodes and send announcements to the neighbors of newly reached nodes.
 
-Specifically, for each `node`, for each edge `(node, next)` we want to announce `(next, node)` to whomever is in charge of `next`.
+Specifically, for each newly reached `node`, for each edge `(node, next)` we want to announce `(next, node)` to whomever is in charge of `next`.
 
-The main bit of non-obvious cleverness we are going to use here is to notice that if there are `peers` workers, the nodes each worker handles all have the same value of `node % peers`. That is just how the exchange channel works at the moment. Consequently, each worker can index per-`node` state using `node / peers`, which means a more compact array without risking collision. This also means that as we scale up the number of workers, the per-worker state scales down linearly rather than staying put, which is important if we want to work with teh big dataz.
+The main bit of non-obvious cleverness we are going to use here is to notice that if there are `peers` workers, the nodes each worker handles all have the same value of `node % peers`. That is just how the exchange channel works at the moment. Consequently, each worker can index per-`node` state using the index `node / peers`, which means a more compact array without risking collision. This also means that as we scale up the number of workers, the per-worker state scales down linearly rather than staying put, which is important if we want to work with teh big dataz.
 
 We'll use the same `done` array as indicated above, except rather than use `None` and `Some(prev)` to indicate whether we have seen a node or not, we'll use `u32::max_value()` for `None` and any other value to indicate a valid `prev`. Rust has mechanisms to make this less error-prone (the `NonZero` struct, which optimizes `Option<NonZero<u32>>` to be a `u32`, among other things), but they aren't stable yet. So we fake things out for now.
 
@@ -262,7 +264,9 @@ The BFS example is rigged to take a number of nodes and a number of edges as com
     0.023720855941064656:	time: (Root, 6)
     Echidnatron%
 
-Ten thousand edges in 17 milliseconds (`0.024-0.007`)! That is like 1.7 microseconds per edge. Wooooo! Woooooooooo!
+Ten thousand edges in 17 milliseconds (`0.024-0.007`)! That is like 1.7 microseconds per edge. Wooooo! Wooo!
+
+Woooooooooo!
 
 Oops. Wait. That was a debug build. Classic blunder. Wait a sec...
 
