bug in pseudocode

--- a/posts/2015-09-21.md
+++ b/posts/2015-09-21.md
@@ -55,7 +55,7 @@ Let's write down some pseudo-code to do this, where we track the node that lead 
 ```rust
 let mut done = vec![None; nodes];
 let mut todo = VecDeque::new();
-todo.push(root);
+todo.push((root, root));
 
 // for each edge reaching a `node`, have a think.
 while let Some((node, prev)) = todo.dequeue() {
