--- a/posts/2015-09-21.md
+++ b/posts/2015-09-21.md
@@ -154,7 +154,7 @@ We will do the sorting in the `/* initialize the graph from edges */` section.
 
 The second input provides our operator with reachability announcements of the form `(node, prev)`. Each announcement means that `node` is reachable from the root, by way of `prev`. At this point we could try and look into `done[node]` to see if `prev` has been set yet, but let's hold off on that for the moment. There is the subtle issue that we might be seeing messages for different depths at the same time, and we don't want to do this logic if the message is from anything other than the smallest active depth.
 
-For the moment, we will do the same as with the edges: stash the vector of data we got. Actually, we'll put it in a stash keyed by `time`, which let's us easily tell these stashes apart. This involves a `HashMap` lookup by `time`, but this happens only once per batch, so it isn't all that expensive in total.
+For the moment, we will do the same as with the edges: stash the vector of data we got. Actually, we'll put it in a stash keyed by `time`, which lets us easily tell these stashes apart. This involves a `HashMap` lookup by `time`, but this happens only once per batch, so it isn't all that expensive in total.
 
 ```rust
 // receive (node, root) pairs, note any new ones.
