more pseudo-typos

--- a/posts/2015-09-21.md
+++ b/posts/2015-09-21.md
@@ -59,7 +59,7 @@ todo.push((root, root));
 
 // for each edge reaching a `node`, have a think.
 while let Some((node, prev)) = todo.dequeue() {
-    if done.is_none() {
+    if done[node].is_none() {
         done[node] = Some(prev);
         for next in graph.neighbors(node) {
             todo.enqueue((next, node));
