--- a/posts/2015-09-29.md
+++ b/posts/2015-09-29.md
@@ -74,7 +74,7 @@ We'd really like to end up with the final distances for each reachable node, but
 
 We know how to create an initial version of this collection, just by starting with the single pair `(root, 0)`. This means that `root` is at distance zero from something (itself), and all other nodes are not yet reachable.
 
-We will need to use `iterate` to repeatedly expand and improve this collection. So, we need to think out how to take a collection `(node, dist)` and turn it in to a new collection that reflects some sort of progress. What ever we do should have the property that if we do it to the collection enough, we end up at the right answer.
+We will need to use `iterate` to repeatedly expand and improve this collection. So, we need to think out how to take a collection of `(node, dist)` pairs and turn it in to a new collection that reflects some sort of progress. What ever we do should have the property that if we do it to the collection enough, we end up at the right answer.
 
 How about we take the `(node, dist)` pairs, join them with the set of `(node, next)` edges, and propose `(next, dist + 1)` as a distance that might be interesting for `next`.
 
