--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -301,7 +301,13 @@ Doing this requires a few custom operators. As part of this, we'll also clean up
 
    Timely's `loop_variable` method does this, by letting you use a stream before defining it. Once defined, the contents have their loop coordinate incremented by one.
 
-3. We'll want an operator `leave` that extricates the collection in the last iteration from the loop. Another way to think of "the collection in the last iteration" is "the accumulation of all the differences". We just need to output all of the differences, and they will add up to the final value of the collection. Timely's `leave` operator does the right thing for us. 
+3. We'll want an operator `leave` that extricates the collection in the last iteration from the loop. 
+
+         leave(collection)[t] = collection[(t, infinity)]
+
+    If we want to be more serious, we could replace `infinity` with `u64::max_value()` or whatever we used as the maximum iterations.
+    
+    Another way to think of "the collection in the last iteration" is "the accumulation of all the differences". We just need to output all of the differences, and they will add up to the final value of the collection. Timely's `leave` operator does the right thing for us. 
 
 So we just use timely to get these special operators. How fortunate!
 
