--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -306,8 +306,8 @@ Doing this requires a few custom operators. As part of this, we'll also clean up
          leave(collection)[t] = collection[(t, infinity)]
 
     If we want to be more serious, we could replace `infinity` with `u64::max_value()` or whatever we used as the maximum iterations.
-    
-    Another way to think of "the collection in the last iteration" is "the accumulation of all the differences". We just need to output all of the differences, and they will add up to the final value of the collection. Timely's `leave` operator does the right thing for us. 
+
+    This seems like it might be a total pain to figure out, but it's acually really easy. Another way to think of "the collection in the last iteration" is "the accumulation of all the differences". We just need to output all of the differences, and they will add up to the final value of the collection. Timely's `leave` operator does the right thing for us. 
 
 So we just use timely to get these special operators. How fortunate!
 
