--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -335,4 +335,4 @@ self.scope().scoped(|subgraph| {
 
 ## Wrap-up
 
-Now you actually know enough to go and implement a simple version of differential dataflow. There are some interesting optimizations and implementation details to discuss, but for now let's take a bit of a rest. I'll work on polishing this text to try and better explain things, so do send any comments or pull requests along!
+Now you actually know enough to go and implement a simple version of differential dataflow. There are some interesting optimizations and implementation details to discuss, but for now let's take a bit of a rest. I'd like to work on polishing this text to try and better explain things, so do send any comments or pull requests along! Any thoughts on a better way of explaining things, or maybe a *twitch* Javascript implementation that lets you play around with inputs and outputs and see what differences look like at various points?
