--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -1,5 +1,7 @@
 ## An introduction to differential dataflow, part 2.
 
+**Note**: In progress.
+
 This is the second, much delayed, post about differential dataflow. In this post we are going to talk through some of the moving parts of differential dataflow, and sketch some of the reasons behind various choices. Ideally, we'll get you to a point where you understand what should be true about a differential dataflow *operator*, which may allow you to reason about the work done and messages sent by operators in your computations.
 
 Since it has been a while, let's recap what is exciting about differential dataflow, and why you might be interested in its implementation. First, differential dataflow allows you to do some pretty neat things, incrementally updating complicated big-data computations in near real-time. The previous post explains bread-first search, and how you can you can both perform the computation efficiently, as well as update the computation in microseconds.
