--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -116,7 +116,7 @@ The other side of the nesting story, where we just wallpapered over those subgra
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/inception-dataflow.png)
 
-All of the math works out just fine, as long as the outside world summarizes itself back to the nested subgraph. The subgraph now understandings what happens to timestamps on messages that are handed to a `leave` operator (an input to the `outside world`) when they return through `enter` operators (an output of the `outside world`). Messages floating around outside the subgraph are just capabilities of the `outside world`; the subgraph doesn't need to know where they are, just that they exist as capabilities for the `enter` ports. 
+All of the math works out just fine, as long as the outside world summarizes itself back to the nested subgraph. The subgraph now understands what happens to timestamps on messages that are handed to a `leave` operator (an input to the `outside world`) when they return through `enter` operators (an output of the `outside world`). Messages floating around outside the subgraph are just capabilities of the `outside world`; the subgraph doesn't need to know where they are, just that they exist as capabilities for the `enter` ports. 
 
 It is a lot like the outside world is actually a nested scope within the subgraph.
 
