--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -12,7 +12,7 @@ Timely dataflow (in Rust) is a distributed dataflow system. A timely dataflow co
 
 One of the new and exciting features of timely dataflow is its support for "notifications", which are essentially an indication of progress made in the computation, across the entire system. So, an operator might be able to learn that it has received all of the input it will receive for some round of input data, even though the worker hosting the operator doesn't have total information about the state of all the other workers. Of course, before we can indicate progress, we have to be able to measure it, which leads us to timely dataflow's "logical timestamps".
 
-Logical timestamps are bits of metadata associated with actual data that get sent around, and they record things like "which round of input data", or "which iteration of a loop". One way to think of them is that if you were executing the computation imperative-style, with a single thread, what would be on your stack or in your temporaries when you see this data. Let's look at an example.
+Logical timestamps are bits of metadata associated with actual data that get sent around, and they indicate things like "which round of input data", or "which iteration of a loop". One way to think of them is that if you were executing the computation imperative-style, with a single thread, what would be on your stack or in your temporaries when you see this data. Let's look at an example.
 
 Here is a hypothetical dataflow graph, with some special timely operators in blue. I've organized the operators into "scopes", which are actually a timely dataflow concept, but for the moment may just like like nice boxes with dashed lines.
 
@@ -22,7 +22,7 @@ Rather than think too hard about what the operators do, or even what data they p
 
 The first rule about timestamps is that within a scope (a dashed region), all operators must send and receive data with the same type of timestamp. So the `input` operator will produce data with some sort of timestamp (often an increasing integer), and `Op1` and `Op4` need to use this timestamp when they send and receive data. The `Op2` and `Op3` operators live in a nested scope, and so their timestamps can be different; there are some rules about this, and it is probably best to think of them as the timestamp of the outer scope, with some additional information (often another increasing integer, for counting loop iterations). As you can see, there is a transition with the `enter` and `leave` operators, which we will talk about.
 
-So, let's imagine that the `input` operator produces some data with timestamp `0`, and then some data with timestamp `1`, and then some data with timestamp `2`. Perhaps at some point the `input` operator promises not to produce any more data with timestamp `0`. At this point, we might like to let `Op1` know that, once it has received all of the data that has been sent so far, there won't be any more messages with a timestamp `0`. This could be great news for `Op1`, who might have been waiting to accumulate all of its input data before acting. When we communicate this information to `Op1` we call it a "notification".
+Imagine that the `input` operator produces some data with timestamp `0`, and then some data with timestamp `1`, and then some data with timestamp `2`. Perhaps at some point the `input` operator promises not to produce any more data with timestamp `0`. At this point, we might like to let `Op1` know that, once it has received all of the data that has been sent so far, there won't be any more messages with a timestamp `0`. This could be great news for `Op1`, who might have been waiting to accumulate all of its input data before acting. When we communicate this information to `Op1` we call it a "notification".
 
 Notifications are an important part of timely dataflow, because they provide information about the global state of the computation to otherwise myopic operators who just pick up bits of data they receive and act on them. At the same time, notifications can be hard to do well: we want them to be correct (you shouldn't receive a notification for a timestamp if more data might arrive), but we don't want to force the operators to repeatedly coordinate in any painful fashion. To make matters worse, things like cycles may make it hard to tell exactly when we can notify `Op3` or `Op4` if there are still messages circulating.
 
@@ -36,17 +36,13 @@ Each operator has some number of input ports on which it receives messages. In t
 
 In the Naiad paper we described these using "frontiers", which were a set of timestamps where if some other timestamp was strictly less than any element of the frontier, you wouldn't see it ever again. This is a bit of an approximation, in that it requires timestamps to be ordered (partially, not totally), and you aren't allowed to advance the frontier until all prior timestamps have vanished. This means that a timestamp `0` message could hold up the notification for timestamp `1`, which we didn't find to be all that horrible. If you want `0` and `1` to be independent, don't use a partial order with `0 < 1`.
 
-We are basically going to lift this idea from Naiad, but be careful to do frontiers on a port-by-port basis. Naiad over-approximated and combined all of the frontiers for the input ports into one, which it presented to the operator. That isn't horrible, but it makes some optimizations hard (e.g. in differential dataflow's join operator), and it would totally prevent us from presenting nested scopes upwards as operators.
+We are basically going to lift this idea from Naiad, but be careful to do frontiers on a port-by-port basis. Naiad over-approximated and combined all of the frontiers for the input ports into one, which it presented to the operator. That isn't horrible, but it makes some optimizations hard (e.g. in differential dataflow's join operator), and it would totally prevent us from presenting nested scopes upwards as operators. Mostly it loses accuracy, which is something we are going to try hard to maintain, so that we can introduce lossless abstractions.
 
 ### Where do messages come from?
 
-To guarantee that some input port will never again receive a message with some timestamp, we need to understand where timestamped messages come from. If we can put some restrictions into place, we can start to reason about whether one might or might not see a given timestamp, given the current state of the world.
+To guarantee that some input port will never again receive a message with some timestamp, we need to understand where timestamped messages come from. If we can put some restrictions into place, we can start to reason about whether one might or might not see a given timestamp, given the current state of the world. 
 
-There are two circumstance in which an timely operator can produce a message with timestamp `t` in timely dataflow:
-
-1. If the operator receives an input message with timestamp `t' <= t` it is at liberty to send output messages with timestamp `t` on any of its outputs. 
-
-2. If the operator retaines the capability to send a message with timestamp `t' <= t`, from when it previously received a message, it can send messages with timestamp `t` on any of its outputs. Retaining a capability is something that the operator has to do explicitly, so timely is in the loop, so to speak. It is a little like having the operator send itself a message internally that it doesn't receive until it chooses to. 
+Timely dataflow does impose restrictions on what timestamp an operator can use when it sends a message. When an operator receives an input with timestamp `t` it also receives a capability to send messages with that timestamp. The operator can send messages with timestamp `t` only if it hold a capability for a timestamp `t' <= t`. 
 
 This means that if we know about all of the outstanding messages (still in system queues) and all of the outstanding capabilities, and we look really really hard at the dataflow graph, we should be able to figure out if it is possible that a message with a certain timestamp might reach a specific input port.
 
@@ -54,17 +50,20 @@ Let's look at another hypothetical dataflow graph again, sort of like up above b
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/simple-dataflow.png)
 
-Imagine that at the moment `input` only holds a capability to send messages with timestamp `3` and there are some messages going from `Op2` to `Op3` with timestamp `2`. By looking really hard and thinking, we can tell `Op1` and `Op2` that they won't receive any messages with timestamp `2`, and we can tell `Op3` and `Op4` that they won't receive any messages with timestamp `1`. 
+Imagine that at the moment `input` only holds a capability to send messages with timestamp `3` and there are some messages going from `Op2` to `Op3` with timestamp `2`. By looking really hard and thinking, we can tell that 
+
+1. `Op1` and `Op2` that they won't receive any messages with timestamp `2`, and 
+2. `Op3` and `Op4` that they won't receive any messages with timestamp `1`. 
 
 If this was all we needed to do, which is roughly the case in a directed acyclic graph, we could just replace our "hard looking and thinking" with reachability information from each output port to each input port. As messages and capabilities are retired, we tweak the open timestamps at each input port they can reach, and do something exciting if the frontier advances. 
 
-But this train ain't stopping at DAG-town. 
+But, this train ain't stopping at DAG-town. 
 
 ### TOOOOOOT!!!
 
-So actually our dataflow graphs look like this:
+Our dataflow actually graphs look like this:
 
-![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/dataflow.png)
+![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/scc-dataflow.png)
 
 And this is weird and complicated, because we have cycles and so output ports can reach back to input ports on the same operators, and if we just think about connectivity it is all a terrible mess. 
 
