--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -61,19 +61,19 @@ But, this train ain't stopping at DAG-town.
 
 ### TOOOOOOT!!!
 
-Our dataflow actually graphs look like this:
+Yeah actually, our dataflow actually graphs kinda look more like this (actual SCC computation):
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/scc-dataflow.png)
 
-And this is weird and complicated, because we have cycles and so output ports can reach back to input ports on the same operators, and if we just think about connectivity it is all a terrible mess. 
+And this is weird and complicated, because we have cycles and so output ports can reach back to input ports on the same operators, and if we just think about connectivity between ports it is all a terrible mess. We also have operators that speak in terms of different types of timestamps: operators in each of the connected components have different timestamp types from the containing scope, and (logically, at least) from each other.
 
-It is also a mess in the picture above, because we have operators that speak in terms of different types of timestamps, so when we see that `Op1` can reach `Op3`, what does that even mean about what the timestamps look like. We need reachability and some sort of transformation on the timestamps. Naiad tried to do this, putting the whole structure of the dataflow graph in one place, and it was sort of a mess. We had a bunch of baked assumptions about everyone using `UInt64` values, and the only thing they could mean was "loop counter" and ... eesh. Ok, we aren't going to do that this time.
+Naiad got around this by putting the whole structure of the dataflow graph in one place, and it was sort of a mess. We had a bunch of baked assumptions about everyone using `UInt64` values, and the only thing they could mean was "loop counter" and ... eesh. Ok, we aren't going to do that this time.
 
 Let's break the troublesome bits into two more manageable parts, which we'll tackle individually: (a) graphs with cycles, and (b) graphs with nested scopes.
 
 #### Graphs with cycles
 
-Let's just focus in on the part of the graph with the cycle in it:
+Let's just focus in on the part of our initial dataflow graph with the cycle in it:
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/cyclic-dataflow.png)
 
